docs/pages/versions/v54.0.0/sdk/expo.mdx
---
title: Expo
description: Expo 及相关包的一组常用方法和类型。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-54/packages/expo'
packageName: 'expo'
iconUrl: '/static/images/packages/expo.png'
platforms: ['android', 'ios', 'tvos', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { Collapsible } from '~/ui/components/Collapsible';
import { FAQ } from '~/ui/components/FAQ';
import { CODE } from '~/ui/components/Text';

## 安装

<APIInstallSection hideBareInstructions />

## API

```tsx
import * as Expo from 'expo';
```

### `expo/fetch` API

`expo/fetch` 提供了一个 [符合 WinterCG 规范的 Fetch API](https://fetch.spec.wintercg.org/)，可在 web 和移动环境中一致地工作，确保在 Expo 应用中拥有标准化且跨平台的 fetch 体验。

```ts Streaming fetch
import { fetch } from 'expo/fetch';

const resp = await fetch('https://httpbin.org/drip?numbytes=512&duration=2', {
  headers: { Accept: 'text/event-stream' },
});
const reader = resp.body.getReader();
const chunks = [];
while (true) {
  const { done, value } = await reader.read();
  if (done) {
    break;
  }
  chunks.push(value);
}
const buffer = new Uint8Array(chunks.reduce((acc, chunk) => acc + chunk.length, 0));
console.log(buffer.length); // 512
```

### 编码 API

`TextEncoder` 和 `TextDecoder` 是内置 API，提供了使用各种字符编码对文本进行编码和解码的方法。它们在所有平台上都可用。有关 web 和 Node.js 的支持情况，请参考 [浏览器和服务器运行时支持](https://caniuse.com/textencoder)。

```ts TextEncoder and TextDecoder
// [104, 101, 108, 108, 111]
const hello = new TextEncoder().encode('hello');

// "hello"
const text = new TextDecoder().decode(hello);
```

`TextEncoder` API 已包含在 Hermes 引擎中。请参阅 [Hermes GitHub 仓库中 TextEncoder.cpp 的源代码](https://github.com/facebook/hermes/blob/9e2bbf8eda15936ee00aee4f8e024ceaa7cd800d/lib/VM/JSLib/TextEncoder.cpp#L1)。

`TextDecoder` API 在原生平台上并不 [符合规范](https://encoding.spec.whatwg.org/#textdecoder)。仅支持 UTF-8 编码。如果你需要支持更多编码，请使用像 [`text-encoding`](https://www.npmjs.com/package/text-encoding) 这样的 polyfill。

这些 API 的流式等价物 `TextEncoderStream` 和 `TextDecoderStream` 也可在所有平台上使用。它们允许你以流式方式对文本进行编码和解码，这对于处理大量数据而无需一次性将其全部加载到内存中非常有用。

```ts TextEncoderStream
const encoder = new TextEncoderStream();
const stream = new ReadableStream({
  start(controller) {
    controller.enqueue('Hello');
    controller.enqueue('World');
    controller.close();
  },
});
const reader = stream.pipeThrough(encoder).getReader();
reader.read().then(({ done, value }) => {
  console.log(value); // Uint8Array [72, 101, 108, 108, 111]
});
```

### Streams API

原生平台上支持标准 web streams，以匹配 web 和服务器平台的行为。有关 web 和 Node.js 的具体支持情况，请参考 [浏览器和服务器运行时支持](https://caniuse.com/streams)。EAS Hosting 服务器运行时也包含对标准 web streams API 的支持。

可全局访问 `ReadableStream`、`WritableStream` 和 `TransformStream` 类。

```js ReadableStream
const stream = new ReadableStream({
  start(controller) {
    controller.enqueue('Hello');
    controller.enqueue('World');
    controller.close();
  },
});
const reader = stream.getReader();
reader.read().then(({ done, value }) => {
  console.log(value); // Hello
});
reader.read().then(({ done, value }) => {
  console.log(value); // World
});
```

### URL API

`URL` 在所有平台上都提供标准 API。

在原生平台上，内置的 `URL` 和 `URLSearchParams` 实现会替代 `react-native` 中的 shim。有关 web 和 Node.js 的支持情况，请参考 [浏览器和服务器运行时支持](https://caniuse.com/url)。

```ts URL and URLSearchParams
const url = new URL('https://expo.dev');

const params = new URLSearchParams();
```

Expo 内置的 `URL` 支持力求完全 [符合规范](https://developer.mozilla.org/en-US/docs/Web/API/URL)。唯一缺失的例外是，原生平台目前不支持主机名中的 [非 ASCII 字符](https://unicode.org/reports/tr46/)。

```ts Non-ASCII characters
console.log(new URL('http://🥓').toString());

// 这将输出以下内容：
// - Web, Node.js: http://xn--pr9h/
// - Android, iOS: http://🥓/
```

<APISection packageName="expo" />

## 常见问题

关于在项目中使用 `expo` 包的一些常见问题。

<FAQ>

<Collapsible summary={<><CODE>rootRegisterComponent</CODE> 为现有 React Native 项目进行设置</>}>

如果你正在手动管理 React Native 项目的原生目录（**android** 和 **ios**），则需要按照以下说明设置 `registerRootComponent` 函数。这对于 Expo 模块正常工作是必要的。

**Android**

更新 **android/app/src/main/your-package/MainActivity.java** 文件，使 `getMainComponentName` 函数中使用 `main` 这个名称。

```diff android/app/src/main/your-package/MainActivity.java
  @Override
  protected String getMainComponentName() {
+    return "main";
  }
```

**iOS**

更新 iOS **ios/your-project/AppDelegate.(m|mm|swift)** 文件，在 `application:didFinishLaunchingWithOptions:` 函数中的 `createRootViewWithBridge:bridge moduleName:@"main" initialProperties:initProps` 这一行使用 **moduleName** `main`。

</Collapsible>

<Collapsible summary="如果我想把主应用文件命名为 App.js 或 app/_layout.tsx 以外的名字怎么办？">

**对于不使用 [Expo Router](/router/introduction/) 的项目**，你可以将 **package.json** 中的 `"main"` 设置为项目中的任意文件。如果这样做，你就需要使用 `registerRootComponent`。如果你使用自定义入口文件，`export default` 并不会让这个组件成为应用的根组件。

For example, let's say you want to make **src/main.jsx** the entry file for your app — maybe you don't like having JavaScript files in the project root. First, set this in **package.json**:

```json package.json
{
  "main": "src/main.jsx"
}
```

然后，在 **src/main.jsx** 中，确保调用 `registerRootComponent` 并传入你希望在应用根部渲染的组件：

```jsx src/main.jsx
import { registerRootComponent } from 'expo';
import { View } from 'react-native';

function App() {
  return <View />;
}

registerRootComponent(App);
```

**对于使用 [Expo Router](/router/introduction/) 的项目**，你可以按照 [Expo Router 安装指南](/router/installation/#custom-entry-point-to-initialize-and-load) 中的这些步骤创建自定义入口点。要在你的 Expo Router 项目中使用顶层 **src** 目录，请参阅 [src 目录参考](/router/reference/src-directory/) 了解更多信息。

</Collapsible>

</FAQ>
